# flask-example-with-ci

./: pyproject.toml
.github/workflows/: main.yaml
tests/: test_flask_example.py
